--- a/find.html
+++ b/find.html
@@ -24,7 +24,6 @@
         <i class="fas fa-bolt"></i>
       </div>
     </div>
-<div><span class="nav__notification_2"></span>
 </div>
     
     <header class="screen-header">
@@ -115,6 +114,10 @@
           </li>
         </ul>
       </nav>
+      <div id="no-mobile">
+        <span>Your screen is too big ㅠㅠ</span>
+      </div>
+  
   
       <script
         src="https://kit.fontawesome.com/6478f529f2.js"
