--- a/friends.html
+++ b/friends.html
@@ -101,14 +101,19 @@
           </li>
           <li class="nav__btn">
             <a class="nav__link" href="more.html">
-              <span class="nav__notification_2"></span>
+              <div class="nav__notification_1"></div>
 
               <i class="fas fa-ellipsis-h fa-2x"></i
             ></a>
           </li>
         </ul>
       </nav>
-
+      <div id="splash-screen">
+        <i class="fas fa-comment"></i>
+      </div>
+      <div id="no-mobile">
+        <span>Your screen is too big ㅠㅠ</span>
+      </div>
     <script
       src="https://kit.fontawesome.com/aaaee4c701.js"
       crossorigin="anonymous"
