--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
       <a href="#">Find kokoa account for password</a>
     </form>
 
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/aaaee4c701.js"
       crossorigin="anonymous"
